@@ -1,3 +1,8 @@
+Tue Mar 25 03:38:39 GMT 2003  Colin Watson  <cjwatson@debian.org>
+
+	* lib/strappend.c, lib/xstrdup.c, lib/xstrndup.c: Remove unused
+	  definitions of VOID.
+
 Sun Mar 16 00:51:12 GMT 2003  Jeremy C. Reed  <reed@reedmedia.net>
 
 	* configure.in (--enable-mandirs): Use 'mandirs' rather than
